# contacts

./: CMakeLists.txt  contact_control.c  contact_structor.c  file_control.c  main.c  menu_control.c
data/: contacts.txt
headers/: contact_control.h  contact_structor.h  file_control.h  menu_control.h
include/: contact_control.h  contact_structor.h  file_control.h  identification_control.h  input_validation.h  menu_control.h
src/: main.c
src/model/: contact_structor.c
src/persistence/: file_control.c
src/service/: contact_control.c  identification_control.c
src/ui/: menu_control.c
